--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <aside>
       <section id="carta">
         <div class="texto-carta">
-          <h2>NUESTRO MENÚ</h2>
+          <h2><span>-</span> NUESTRO MENÚ <span>-</span></h2>
         </div>
         <div class="carta">
           <div class="carta-izquierda">
@@ -178,34 +178,18 @@
       </section>
 
 
-      <div class="carta">
-        <div class="imagenes-carta">
-          <div class="imagenes-carta-grande-1">
-            <figure>
-              <img src="resources/img/image-1.jpg" alt="" />
-            </figure>
-          </div>
-          <div class="imagenes-carta-chicas">
-            <div class="imagen-">
-              <figure><img src="resources/img/image-2.jpg" alt="" /></figure>
+      <section id="imagenes-carta" class="mosaico-asimetrico">
+        <div class="fila">
+            <img src="resources/img/image-1.jpg" alt="Imagen Grande Izquierda" class="img-grande">
+            <div class="contenedor-pequenas">
+                <img src="resources/img/image-2.jpg" alt="Imagen Pequeña 1" class="img-pequena">
+                <img src="resources/img/image-3.jpg" alt="Imagen Pequeña 2" class="img-pequena">
+                <img src="resources/img/image-4.jpg" alt="Imagen Pequeña 3" class="img-pequena">
+                <img src="resources/img/image-5.jpg" alt="Imagen Pequeña 4" class="img-pequena">
             </div>
-            <div class="imagen-">
-              <figure><img src="resources/img/image-3.jpg" alt="" /></figure>
-            </div>
-            <div class="imagen-">
-            <figure><img src="resources/img/image-4.jpg" alt="" /></figure>
-            </div>
-            <div class="imagen-">
-              <figure><img src="resources/img/image-5.jpg" alt="" /></figure>
-            </div>
-          </div>
-          <div class="imagenes-carta-grande-2">
-            <figure>
-              <img src="resources/img/image-6.jpg" alt=""/>
-            </figure> 
-          </div>
+            <img src="resources/img/image-6.jpg" alt="Imagen Grande Derecha" class="img-grande">
         </div>
-      </div>
+    </section>
 
 
     </aside>
